--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,7 +84,7 @@
 </body>
 <script>
     var mysfitsApiEndpoint =
-        'http://18.204.5.24:8000/'; // example: 'http://mythi-publi-abcd12345-01234567890123.elb.us-east-1.amazonaws.com'
+        'http://mythical-mysfits-564173998.us-east-1.elb.amazonaws.com/'; // example: 'http://mythi-publi-abcd12345-01234567890123.elb.us-east-1.amazonaws.com'
 
     var app = angular.module('mysfitsApp', []);
 
